z-index fix

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,6 +5,8 @@ header {
     top: 0;
     left: 0;
     right: 0;
+    /* z-index */
+    z-index: 100;
 }
 
 body {
